scrollbar fix

--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -54,6 +54,7 @@ body
     input:focus, select:focus
       border 1px solid teal
 
+
   ul
     list-style none
     margin 0
@@ -88,7 +89,6 @@ body
       right 0
       bottom 75px
       z-index 2
-      overflow scroll
 
       ul
         color rgba(255,255,255,1)
@@ -317,6 +317,7 @@ body
           box-shadow 0px 1px 1px rgba(0,0,0,0.2)
           font-style normal
           border-radius 5px
+          overflow hidden
 
           .inner
             background white
@@ -349,7 +350,6 @@ body
               left 0
               right 0
               bottom 11px
-              overflow scroll
               padding 25px
 
               .description
@@ -553,6 +553,17 @@ body
 
                 .currency, .value
                   font-weight bold
+
+.scrollbar-measure
+  width 100px
+  height 100px
+  overflow scroll
+  position absolute
+  top -9999px
+
+.scroller
+  overflow-y scroll
+  right auto
 
 
       .main_pairing
